Ex4/solution/main.tf
resource "azurerm_resource_group" "rg-app-01" {
  name     = "rg-ex04"
  location = var.location
}

// VNET-HUB

resource "azurerm_virtual_network" "vnet-hub" {
  name                = "vnet-hub"
  resource_group_name = azurerm_resource_group.rg-app-01.name
  address_space       = ["10.0.0.0/16"]
  location            = var.location
}

resource "azurerm_subnet" "subnet-hub-01" {
  name                 = "subnet-hub-01"
  resource_group_name  = azurerm_resource_group.rg-app-01.name
  virtual_network_name = azurerm_virtual_network.vnet-hub.name
  address_prefixes     = ["10.0.0.0/24"]
}

resource "azurerm_linux_virtual_machine" "vm-client" {
  name                            = "vm-client"
  location                        = var.location
  resource_group_name             = azurerm_resource_group.rg-app-01.name
  network_interface_ids           = [azurerm_network_interface.nic-client.id]
  size                            = "Standard_B1ms"
  admin_username                  = var.admin_username
  admin_password                  = var.admin_password
  disable_password_authentication = false

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Premium_LRS"
  }

  source_image_reference {
    publisher = "canonical"
    offer     = "ubuntu-24_04-lts"
    sku       = "server"
    version   = "latest"
  }

  boot_diagnostics {}
}

resource "azurerm_network_interface" "nic-client" {
  name                = "nic-client"
  location            = var.location
  resource_group_name = azurerm_resource_group.rg-app-01.name

  ip_configuration {
    name                          = "ipconfig1"
    subnet_id                     = azurerm_subnet.subnet-hub-01.id
    private_ip_address_allocation = "Dynamic"
  }
}

// VNET-SPOKE

resource "azurerm_virtual_network" "vnet-spoke" {
  name                = "vnet-spoke"
  resource_group_name = azurerm_resource_group.rg-app-01.name
  address_space       = ["10.1.0.0/16"]
  location            = var.location
}

resource "azurerm_subnet" "subnet-spoke-01" {
  name                 = "subnet-spoke-01"
  resource_group_name  = azurerm_resource_group.rg-app-01.name
  virtual_network_name = azurerm_virtual_network.vnet-spoke.name
  address_prefixes     = ["10.1.0.0/24"]
}

resource "azurerm_linux_virtual_machine" "vm-app-i01" {
  name                            = "vm-app-i01"
  location                        = var.location
  resource_group_name             = azurerm_resource_group.rg-app-01.name
  network_interface_ids           = [azurerm_network_interface.nic-app-i01.id]
  size                            = "Standard_B1ms"
  admin_username                  = var.admin_username
  admin_password                  = var.admin_password
  disable_password_authentication = false

  custom_data = base64encode(<<-EOF
     #!/bin/bash
     apt-get update
     apt-get upgrade -y
     apt-get install -y nginx
     echo "VM1" > /var/www/html/index.html
     systemctl restart nginx
     EOF
  )

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Premium_LRS"
  }

  source_image_reference {
    publisher = "canonical"
    offer     = "ubuntu-24_04-lts"
    sku       = "server"
    version   = "latest"
  }

  boot_diagnostics {}
}

resource "azurerm_network_interface" "nic-app-i01" {
  name                = "nic-app-i01"
  location            = var.location
  resource_group_name = azurerm_resource_group.rg-app-01.name

  ip_configuration {
    name                          = "ipconfig1"
    subnet_id                     = azurerm_subnet.subnet-spoke-01.id
    private_ip_address_allocation = "Dynamic"
  }
}

resource "azurerm_linux_virtual_machine" "vm-app-i02" {
  name                            = "vm-app-i02"
  location                        = var.location
  resource_group_name             = azurerm_resource_group.rg-app-01.name
  network_interface_ids           = [azurerm_network_interface.nic-app-i02.id]
  size                            = "Standard_B1ms"
  admin_username                  = var.admin_username
  admin_password                  = var.admin_password
  disable_password_authentication = false

  custom_data = base64encode(<<-EOF
     #!/bin/bash
     apt-get update
     apt-get upgrade -y
     apt-get install -y nginx
     echo "VM2" > /var/www/html/index.html
     systemctl restart nginx
     EOF
  )

  os_disk {
    caching              = "ReadWrite"
    storage_account_type = "Premium_LRS"
  }

  source_image_reference {
    publisher = "canonical"
    offer     = "ubuntu-24_04-lts"
    sku       = "server"
    version   = "latest"
  }

  boot_diagnostics {}
}

resource "azurerm_network_interface" "nic-app-i02" {
  name                = "nic-app-i02"
  location            = var.location
  resource_group_name = azurerm_resource_group.rg-app-01.name

  ip_configuration {
    name                          = "ipconfig1"
    subnet_id                     = azurerm_subnet.subnet-spoke-01.id
    private_ip_address_allocation = "Dynamic"
  }
}

// Internal Load Balancer

resource "azurerm_lb" "lb-internal-spoke" {
  name                = "lb-internal-spoke"
  location            = var.location
  resource_group_name = azurerm_resource_group.rg-app-01.name
  sku                 = "Standard"

  frontend_ip_configuration {
    name                          = "fp-ip"
    subnet_id                     = azurerm_subnet.subnet-spoke-01.id
    private_ip_address_allocation = "Dynamic"
  }

  depends_on = [
    azurerm_linux_virtual_machine.vm-app-i01,
    azurerm_linux_virtual_machine.vm-app-i02
  ]
}

resource "azurerm_lb_backend_address_pool" "lb-internal-backend-pool" {
  loadbalancer_id = azurerm_lb.lb-internal-spoke.id
  name            = "backend-pool"
}

resource "azurerm_network_interface_backend_address_pool_association" "lb-internal-nic-app-i01-association" {
  network_interface_id    = azurerm_network_interface.nic-app-i01.id
  ip_configuration_name   = "ipconfig1"
  backend_address_pool_id = azurerm_lb_backend_address_pool.lb-internal-backend-pool.id
}

resource "azurerm_network_interface_backend_address_pool_association" "lb-internal-nic-app-i02-association" {
  network_interface_id    = azurerm_network_interface.nic-app-i02.id
  ip_configuration_name   = "ipconfig1"
  backend_address_pool_id = azurerm_lb_backend_address_pool.lb-internal-backend-pool.id
}

resource "azurerm_lb_probe" "lb-internal-lb-probe" {
  loadbalancer_id = azurerm_lb.lb-internal-spoke.id
  name            = "http-probe"
  protocol        = "Http"
  port            = 80
  request_path    = "/"
}

resource "azurerm_lb_rule" "lb-internal-lb-rule" {
  loadbalancer_id                = azurerm_lb.lb-internal-spoke.id
  name                           = "http-rule"
  protocol                       = "Tcp"
  frontend_port                  = 80
  backend_port                   = 80
  frontend_ip_configuration_name = azurerm_lb.lb-internal-spoke.frontend_ip_configuration[0].name
  backend_address_pool_ids       = [azurerm_lb_backend_address_pool.lb-internal-backend-pool.id]
  probe_id                       = azurerm_lb_probe.lb-internal-lb-probe.id
}

// External Load Balancer

resource "azurerm_public_ip" "pip-external-lb" {
  name                = "pip-external-lb"
  location            = var.location
  resource_group_name = azurerm_resource_group.rg-app-01.name
  allocation_method   = "Static"
}

resource "azurerm_lb" "lb-external-spoke" {
  name                = "lb-external-spoke"
  location            = var.location
  resource_group_name = azurerm_resource_group.rg-app-01.name
  sku                 = "Standard"

  frontend_ip_configuration {
    name                 = "fp-ip"
    public_ip_address_id = azurerm_public_ip.pip-external-lb.id
  }

  depends_on = [
    azurerm_linux_virtual_machine.vm-app-i01,
    azurerm_linux_virtual_machine.vm-app-i02
  ]
}

resource "azurerm_lb_backend_address_pool" "lb-external-backend-pool" {
  loadbalancer_id = azurerm_lb.lb-external-spoke.id
  name            = "lb-external-backend-pool"
}

resource "azurerm_network_interface_backend_address_pool_association" "lb-external-nic-app-i01-association" {
  network_interface_id    = azurerm_network_interface.nic-app-i01.id
  ip_configuration_name   = "ipconfig1"
  backend_address_pool_id = azurerm_lb_backend_address_pool.lb-external-backend-pool.id
}

resource "azurerm_network_interface_backend_address_pool_association" "lb-external-nic-app-i02-association" {
  network_interface_id    = azurerm_network_interface.nic-app-i02.id
  ip_configuration_name   = "ipconfig1"
  backend_address_pool_id = azurerm_lb_backend_address_pool.lb-external-backend-pool.id
}

resource "azurerm_lb_probe" "lb-external-lb-probe" {
  loadbalancer_id = azurerm_lb.lb-external-spoke.id
  name            = "http-probe"
  protocol        = "Http"
  port            = 80
  request_path    = "/"
}

resource "azurerm_lb_rule" "lb-external-lb-rule" {
  loadbalancer_id                = azurerm_lb.lb-external-spoke.id
  name                           = "http-rule"
  protocol                       = "Tcp"
  frontend_port                  = 80
  backend_port                   = 80
  frontend_ip_configuration_name = azurerm_lb.lb-external-spoke.frontend_ip_configuration[0].name
  backend_address_pool_ids       = [azurerm_lb_backend_address_pool.lb-external-backend-pool.id]
  probe_id                       = azurerm_lb_probe.lb-external-lb-probe.id
}

// VNET peering

resource "azurerm_virtual_network_peering" "hub-to-spoke" {
  name                      = "hub-to-spoke"
  resource_group_name       = azurerm_resource_group.rg-app-01.name
  virtual_network_name      = azurerm_virtual_network.vnet-hub.name
  remote_virtual_network_id = azurerm_virtual_network.vnet-spoke.id
}

resource "azurerm_virtual_network_peering" "spoke-to-hub" {
  name                      = "spoke-to-hub"
  resource_group_name       = azurerm_resource_group.rg-app-01.name
  virtual_network_name      = azurerm_virtual_network.vnet-spoke.name
  remote_virtual_network_id = azurerm_virtual_network.vnet-hub.id
}

// Application Security Group

resource "azurerm_application_security_group" "asg-spoke-01" {
  name                = "asg-spoke-01"
  location            = var.location
  resource_group_name = azurerm_resource_group.rg-app-01.name
}

resource "azurerm_network_interface_application_security_group_association" "app-i01" {
  application_security_group_id = azurerm_application_security_group.asg-spoke-01.id
  network_interface_id          = azurerm_network_interface.nic-app-i01.id
}

resource "azurerm_network_interface_application_security_group_association" "app-i02" {
  application_security_group_id = azurerm_application_security_group.asg-spoke-01.id
  network_interface_id          = azurerm_network_interface.nic-app-i02.id
}

// Network Security Group

resource "azurerm_network_security_group" "nsg-spoke-01" {
  name                = "nsg-spoke-01"
  location            = var.location
  resource_group_name = azurerm_resource_group.rg-app-01.name
}

// Inbound

resource "azurerm_network_security_rule" "allow-http" {
  name                                       = "allow-http"
  priority                                   = 110
  direction                                  = "Inbound"
  access                                     = "Allow"
  protocol                                   = "Tcp"
  source_port_range                          = "*"
  destination_port_range                     = "80"
  source_address_prefix                      = "Internet"
  destination_application_security_group_ids = [azurerm_application_security_group.asg-spoke-01.id]
  resource_group_name                        = azurerm_resource_group.rg-app-01.name
  network_security_group_name                = azurerm_network_security_group.nsg-spoke-01.name
}

resource "azurerm_network_security_rule" "allow-http-from-hub" {
  name                                       = "allow-http-from-hub"
  priority                                   = 115
  direction                                  = "Inbound"
  access                                     = "Allow"
  protocol                                   = "Tcp"
  source_port_range                          = "*"
  destination_port_range                     = "80"
  source_address_prefix                      = "10.0.0.0/16"
  destination_application_security_group_ids = [azurerm_application_security_group.asg-spoke-01.id]
  resource_group_name                        = azurerm_resource_group.rg-app-01.name
  network_security_group_name                = azurerm_network_security_group.nsg-spoke-01.name
}

resource "azurerm_network_security_rule" "D-IN-Any" {
  name                        = "D-IN-Any"
  priority                    = 4096
  direction                   = "Inbound"
  access                      = "Deny"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.rg-app-01.name
  network_security_group_name = azurerm_network_security_group.nsg-spoke-01.name
}

// Outbound

resource "azurerm_network_security_rule" "allow-internet" {
  name                                  = "allow-internet"
  priority                              = 110
  direction                             = "Outbound"
  access                                = "Allow"
  protocol                              = "*"
  source_port_range                     = "*"
  destination_port_range                = "*"
  source_application_security_group_ids = [azurerm_application_security_group.asg-spoke-01.id]
  destination_address_prefix            = "Internet"
  resource_group_name                   = azurerm_resource_group.rg-app-01.name
  network_security_group_name           = azurerm_network_security_group.nsg-spoke-01.name
}

resource "azurerm_network_security_rule" "D-OU-Any" {
  name                        = "D-OU-Any"
  priority                    = 4096
  direction                   = "Outbound"
  access                      = "Deny"
  protocol                    = "*"
  source_port_range           = "*"
  destination_port_range      = "*"
  source_address_prefix       = "*"
  destination_address_prefix  = "*"
  resource_group_name         = azurerm_resource_group.rg-app-01.name
  network_security_group_name = azurerm_network_security_group.nsg-spoke-01.name
}

resource "azurerm_subnet_network_security_group_association" "nsg-subnet-association" {
  subnet_id                 = azurerm_subnet.subnet-spoke-01.id
  network_security_group_id = azurerm_network_security_group.nsg-spoke-01.id
}
